--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,8 @@ dependencies {
     //toast
     implementation 'org.jetbrains.anko:anko-common:0.8.3'
     //implementation 'com.squareup.okhttp3:okhttp:3.13.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:customtabs:28.0.0'
 }
