--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Activity.PublicEventsActivity">
+        </activity>
         <activity android:name=".Activity.DashBoardActivity">
         </activity>
         <activity android:name=".Activity.LoginActivity">
